# walls

./: .gitignore  .gitlab-ci.yml  README.md  RELEASE.md  Walls.sln  trx.sln  vs_version.props  vs_version_W7.props  zlib.props
Cairo/: Cairo.sln  Cairo.vcxproj  (+1 more)
D2D-Sym/: AbtBox.h  (+23 more)
ECW_3.3/: Makefile.am  Makefile.in  configure.in  readme.txt
ECW_3.3/source/C/NCSEcw/NCSEcw/: NCSAffineTransform.cpp  NCSBlockFile.cpp  NCSEcw.cpp  NCSEcw.dsp  NCSEcw.dsw  NCSEcw.sln  NCSEcw.vcproj  NCSEcw8.sln  NCSEcw8.vcproj  NCSEcwCom.h  NCSFile.cpp  NCSHuffmanCoder.cpp  NCSOutputFile.cpp  NCSRenderer.cpp  NCSWorldFile.cpp  StdAfx.h  makefile  ncscbm.c  ncscbmidwt.c  ncscbmnet.c  ncscbmopen.c  ncscbmpurge.c
ECW_3.3/source/C/NCSEcw/NCSEcw/NCSEcw_Static/: NCSEcw_Static.dsp  NCSEcw_Static.vcproj  NCSEcw_Static8.vcproj
ECW_3.3/source/C/NCSEcw/NCSEcw/releasemindependency/: vc70.idb
ECW_3.3/source/C/NCSEcw/NCSEcwC/: NCSEcwC.dsp  NCSEcwC.vcproj  NCSEcwC8.vcproj
ECW_3.3/source/C/NCSEcw/NCSEcwCE/: NCSEcw.vcp  NCSEcw.vcw
ECW_3.3/source/C/NCSEcw/NCSEcwC_SDK/: NCSEcwC_SDK.dsp  NCSEcwC_SDK.vcproj  NCSEcwC_SDK8.vcproj  makefile
ECW_3.3/source/C/NCSEcw/NCSJP2/: NCSJP2.cpp  NCSJP2BitsPerComponentBox.cpp  NCSJP2Box.cpp  NCSJP2CaptureResolutionBox.cpp  NCSJP2ChannelDefinitionBox.cpp  NCSJP2ColorSpecificationBox.cpp  NCSJP2ComponentMappingBox.cpp  NCSJP2ContiguousCodestreamBox.cpp  NCSJP2DataEntryURLBox.cpp  NCSJP2DefaultDisplayResolutionBox.cpp  NCSJP2File.cpp  NCSJP2FileTypeBox.cpp  NCSJP2FileView.cpp  NCSJP2GMLGeoLocationBox.cpp  NCSJP2HeaderBox.cpp  NCSJP2ImageHeaderBox.cpp  NCSJP2IntellectualPropertyBox.cpp  NCSJP2PCSBox.cpp  NCSJP2PaletteBox.cpp  NCSJP2ResolutionBox.cpp  NCSJP2SignatureBox.cpp  NCSJP2SuperBox.cpp  NCSJP2UUIDBox.cpp  NCSJP2UUIDInfoBox.cpp  NCSJP2UUIDListBox.cpp  NCSJP2WorldBox.cpp  NCSJP2XMLBox.cpp  NCSJPC.cpp  NCSJPCBuffer.cpp  NCSJPCCOCMarker.cpp  NCSJPCCODMarker.cpp  NCSJPCCOMMarker.cpp  NCSJPCCRGMarker.cpp  NCSJPCCodeBlock.cpp  NCSJPCCodingStyleParameter.cpp  NCSJPCComponent.cpp  NCSJPCComponentDepthType.cpp  NCSJPCDCShiftNode.cpp  NCSJPCDump.cpp  NCSJPCEOCMarker.cpp  (+43 more)
ECW_3.3/source/C/NCSEcw/lcms/: Makefile.in  NEWS  README.1ST  configure.ac  makefile.simple
ECW_3.3/source/C/NCSEcw/lcms/Delphi/: LCMSDLL.PAS  demo1.dcu  demo1.dfm  lcmsdll.dcu
ECW_3.3/source/C/NCSEcw/lcms/Projects/BCB4/: lcms114.bpg  lcms114.bpr  lcmsdll.bpr  testcms.bpr
ECW_3.3/source/C/NCSEcw/lcms/Projects/BorlandC_5.5/: lcms114dll.bat  lcms114dll.lk  lcms114dll.lst
ECW_3.3/source/C/NCSEcw/lcms/Projects/VC6/: Python.dsp  lcms114.dsp  lcms114.dsw  lcmsdll.dsp
ECW_3.3/source/C/NCSEcw/lcms/Projects/VC7/: Python.vcproj  Testbed.vcproj  icc2ps.vcproj  icclink.vcproj  icctrans.vcproj  jpegicc.vcproj  lcms114.sln  lcms114.vcproj  lcmsdll.vcproj  tifficc.vcproj
ECW_3.3/source/C/NCSEcw/lcms/include/: Makefile.in  lcms.h
ECW_3.3/source/C/NCSEcw/lcms/jpegicc/: Makefile.in
ECW_3.3/source/C/NCSEcw/lcms/python/: Makefile.am  Makefile.in
ECW_3.3/source/C/NCSEcw/lcms/samples/: Makefile.in
ECW_3.3/source/C/NCSEcw/lcms/src/: Makefile.am  Makefile.in  cmscnvrt.c  cmserr.c  cmsgamma.c  cmsgmt.c  cmsintrp.c  cmsio1.c  cmslut.c  cmsmatsh.c  cmsmtrx.c  cmsnamed.c  cmspack.c  cmspcs.c  cmssamp.c  cmsvirt.c  cmswtpnt.c  cmsxform.c  makefile.simple
ECW_3.3/source/C/NCSEcw/lcms/testbed/: Makefile.in
ECW_3.3/source/C/NCSEcw/lcms/tifficc/: Makefile.am  Makefile.in
ECW_3.3/source/C/NCSEcw/shared_src/: build_pyr.c  collapse_pyr.c  compress.cpp  ecw_open.c  ecw_read.c  fileio_compress.c  fileio_decompress.c  pack.c  qmf_util.c  quantize.c  unpack.c
ECW_3.3/source/C/NCSGDT2/: NCSGDTEPSGKey.cpp  NCSGDTEpsg.cpp  NCSGDTLocation.cpp
ECW_3.3/source/C/NCSUtil/: CNCSBase64Coder.cpp  CNCSMetabaseEdit.cpp  NCSBase64.cpp  NCSCoordinateConverter.cpp  NCSCoordinateSystem.cpp  NCSCoordinateTransform.cpp  NCSCrypto.cpp  NCSError.cpp  NCSEvent.cpp  NCSExtent.cpp  NCSExtents.cpp  NCSLog.cpp  NCSMutex.cpp  NCSObject.cpp  NCSObjectList.cpp  NCSPoint.cpp  NCSPrefs.cpp  NCSPrefsWin.cpp  NCSRasterCoordinateConverter.cpp  NCSScreenPoint.cpp  NCSServerState.cpp  NCSString.cpp  NCSThread.cpp  NCSUtil.dsp  NCSUtil.vcp  NCSUtil.vcproj  NCSUtil8.vcproj  NCSWorldPoint.cpp  dynamiclib.c  error.c  exception_catch.c  file.c  log.cpp  makefile  malloc.c  mutex.c  pool.c  quadtree.cpp  queue.c  resource.h  (+3 more)
ECW_3.3/source/C/NCSUtil/NCSUtil_Static/: NCSUtil_Static.dsp  NCSUtil_Static.vcproj  NCSUtil_Static8.vcproj
ECW_3.3/source/C/NCSnet/NCScnet2/: NCSWinHttp.c  NCScnet.c  NCScnet2.dsp  NCScnet2.vcp  NCScnet2.vcproj  NCScnet28.vcproj  cnet.h  cnet2util.c  connect.c  packet.c
ECW_3.3/source/C/NCSnet/NCScnet2/NCScnet2_Static/: NCScnet2_Static.dsp  NCScnet2_Static.vcproj  NCScnet2_Static8.vcproj
ECW_3.3/source/C/NCSnet/NCScnet3/: NCScnet3.dsp  makefile
ECW_3.3/source/C/libjpeg/: cjpeg.proj  djpeg.proj  libjpeg.dsp  libjpeg.proj  libjpeg.vcproj
ECW_3.3/source/C/tinyxml/: tinyxmlSTL.vcproj  tinyxml_lib.dsp  tinyxml_lib.vcproj
ECW_3.3/source/C/tinyxml/docs/: annotated.html  classTiXmlAttribute-members.html  classTiXmlAttribute.html  classTiXmlBase-members.html  classTiXmlBase.html  classTiXmlComment-members.html  classTiXmlComment.html  classTiXmlDeclaration-members.html  classTiXmlDeclaration.html  classTiXmlDocument-members.html  classTiXmlDocument.html  classTiXmlElement-members.html  classTiXmlElement.html  classTiXmlHandle-members.html  classTiXmlHandle.html  classTiXmlNode-members.html  classTiXmlNode.html  classTiXmlText-members.html  classTiXmlText.html  classTiXmlUnknown-members.html  classTiXmlUnknown.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_vars.html  hierarchy.html  index.html  tinystr_8h-source.html  tinyxml_8h-source.html  tutorial0.html
ECW_3.3/source/NCSBuildQmake/: libecwj2_win32_net_static.vcxproj  libecwj2_win32_net_static.vcxproj.filters  vc120.idb
ECW_3.3/source/include/: ECW.h  NCSJPCBuffer.h  NCSJPCDefs.h  NCSMisc.h
ECW_3.3/testdata/: Greyscale.ecw  Greyscale.ers  Greyscale2.ers  Greyscale2.jp2  RGBImage.ecw  RGBImage.ers  RGBImage2.ers  RGBImage2.jp2
(+4982 files in other folders)
