SUBDIRS = \
	Source

EXTRA_DIST =	Build.txt License.txt

AM_CPPFLAGS = @LIBECWJ2_DEFS@ @LIBECWJ2_INCLUDES@ 

include_HEADERS = \
	Source/include/CNCSMetabaseEdit.h \
	Source/include/CNCSMultiSZ.h \
	Source/include/ECW.h \
	Source/include/JNCSEcwConfig.h \
	Source/include/JNCSFile.h \
	Source/include/NCSAffineTransform.h \
	Source/include/NCSArray.h \
	Source/include/NCSBase64.h \
	Source/include/NCSBlockFile.h \
	Source/include/NCSBuildNumber.h \
	Source/include/NCSCoordinateConverter.h \
	Source/include/NCSCoordinateSystem.h \
	Source/include/NCSCoordinateTransform.h \
	Source/include/NCSCrypto.h \
	Source/include/NCSDefs.h \
	Source/include/NCSDynamicLib.h \
	Source/include/NCSECWClient.h \
	Source/include/NCSECWCompress.h \
	Source/include/NCSECWCompressClient.h \
	Source/include/NCSEcw.h \
	Source/include/NCSError.h \
	Source/include/NCSErrors.h \
	Source/include/NCSEvent.h \
	Source/include/NCSExtent.h \
	Source/include/NCSExtents.h \
	Source/include/NCSFile.h \
	Source/include/NCSFileIO.h \
	Source/include/NCSGDTLocation.h \
	Source/include/NCSGeoTIFFBoxUtil.h \
	Source/include/NCSHelpContextID.h \
	Source/include/NCSHuffmanCoder.h \
	Source/include/NCSJP2Box.h \
	Source/include/NCSJP2File.h \
	Source/include/NCSJP2FileView.h \
	Source/include/NCSJP2SuperBox.h \
	Source/include/NCSJPC.h \
	Source/include/NCSJPCBuffer.h \
	Source/include/NCSJPCCOCMarker.h \
	Source/include/NCSJPCCODMarker.h \
	Source/include/NCSJPCCOMMarker.h \
	Source/include/NCSJPCCRGMarker.h \
	Source/include/NCSJPCCodeBlock.h \
	Source/include/NCSJPCCodingStyleParameter.h \
	Source/include/NCSJPCComponent.h \
	Source/include/NCSJPCComponentDepthType.h \
	Source/include/NCSJPCDCShiftNode.h \
	Source/include/NCSJPCDefs.h \
	Source/include/NCSJPCDump.h \
	Source/include/NCSJPCEOCMarker.h \
	Source/include/NCSJPCEPHMarker.h \
	Source/include/NCSJPCEcwpIOStream.h \
	Source/include/NCSJPCFileIOStream.h \
	Source/include/NCSJPCICCNode.h \
	Source/include/NCSJPCIOStream.h \
	Source/include/NCSJPCMCTNode.h \
	Source/include/NCSJPCMESNode.h \
	Source/include/NCSJPCMQCoder.h \
	Source/include/NCSJPCMainHeader.h \
	Source/include/NCSJPCMarker.h \
	Source/include/NCSJPCMemoryIOStream.h \
	Source/include/NCSJPCNode.h \
	Source/include/NCSJPCNodeTiler.h \
	Source/include/NCSJPCPLMMarker.h \
	Source/include/NCSJPCPLTMarker.h \
	Source/include/NCSJPCPOCMarker.h \
	Source/include/NCSJPCPPMMarker.h \
	Source/include/NCSJPCPPTMarker.h \
	Source/include/NCSJPCPacket.h \
	Source/include/NCSJPCPacketLengthType.h \
	Source/include/NCSJPCPaletteNode.h \
	Source/include/NCSJPCPrecinct.h \
	Source/include/NCSJPCProgression.h \
	Source/include/NCSJPCProgressionOrderType.h \
	Source/include/NCSJPCQCCMarker.h \
	Source/include/NCSJPCQCDMarker.h \
	Source/include/NCSJPCQuantizationParameter.h \
	Source/include/NCSJPCRCTNode.h \
	Source/include/NCSJPCRGNMarker.h \
	Source/include/NCSJPCRect.h \
	Source/include/NCSJPCResample.h \
	Source/include/NCSJPCResolution.h \
	Source/include/NCSJPCSIZMarker.h \
	Source/include/NCSJPCSOCMarker.h \
	Source/include/NCSJPCSODMarker.h \
	Source/include/NCSJPCSOPMarker.h \
	Source/include/NCSJPCSOTMarker.h \
	Source/include/NCSJPCSegment.h \
	Source/include/NCSJPCSubBand.h \
	Source/include/NCSJPCT1Coder.h \
	Source/include/NCSJPCTLMMarker.h \
	Source/include/NCSJPCTagTree.h \
	Source/include/NCSJPCTilePartHeader.h \
	Source/include/NCSJPCTypes.h \
	Source/include/NCSJPCYCbCr2RGBNode.h \
	Source/include/NCSLog.h \
	Source/include/NCSMalloc.h \
	Source/include/NCSMemPool.h \
	Source/include/NCSMisc.h \
	Source/include/NCSMutex.h \
	Source/include/NCSObject.h \
	Source/include/NCSObjectList.h \
	Source/include/NCSPackets.h \
	Source/include/NCSPoint.h \
	Source/include/NCSPrefs.h \
	Source/include/NCSQuadTree.h \
	Source/include/NCSQueue.h \
	Source/include/NCSRenderer.h \
	Source/include/NCSScreenPoint.h \
	Source/include/NCSServerState.h \
	Source/include/NCSThread.h \
	Source/include/NCSTimeStamp.h \
	Source/include/NCSTimer.h \
	Source/include/NCSUtil.h \
	Source/include/NCSWorldFile.h \
	Source/include/NCSWorldPoint.h \
	Source/include/NCScnet.h \
	Source/include/NCSnet.h \
	Source/include/gcs_erm.h \
	Source/include/gdt_pub.h \
	Source/include/gdt_stat.h \
	Source/include/pcs_erm.h \
	Source/C/NCSEcw/lcms/include/lcms.h \
	Source/C/NCSEcw/lcms/include/icc34.h \
	Source/NCSBuildGnu/NCSGnuConfig.h 

